--- a/projetox/padrao.css
+++ b/projetox/padrao.css
@@ -12,7 +12,7 @@ header{
 
 .headerin{
     max-width: 1700px;
-    width: 100%;
+    width: 90%;
     height: 80px;
     margin: auto;
 }
@@ -40,6 +40,7 @@ header{
     line-height: 80px;
     text-decoration: none;
     font-family: sans-serif;
+    color: black;
 }
 
 nav{
@@ -128,7 +129,7 @@ input{
     margin: auto;
 }
 
-.titulo h2{
+.titulo h1{
     max-width: 1700px;
     width: 100%;
     margin: auto;
@@ -149,6 +150,7 @@ section{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-bottom: 20px;
 }
 
 .sec1{
@@ -160,19 +162,19 @@ section{
 
 .cont{
     width: 100%;
-    height: 450px;
+    height: 350px;
     margin-top: 40px;
 }
 
 
 .imgbarbuto{
     width: 100%;
-    height: 380px;
+    height: 280px;
 }
 
 .imgbarbuto img{
     width: 100%;
-    height: 380px;
+    height: 280px;
     border: 2px;
     border-style: solid;
     border-color: black;
@@ -181,11 +183,31 @@ section{
 
 .cont2{
     width: 100%;
-    height: 450px;
-    
+    height: 350px;
     margin-top: 40px;
-    margin-left: 40px;
-    margin-right: 40px;
+    margin-left: 60px;
+    margin-right: 60px;
+}
+
+.cont h3{
+    margin-top: 15px;
+    margin-bottom: 5px;
+}
+.cont2 h3{
+    margin-top: 15px;
+    margin-bottom: 5px;
+}
+
+.descricaonota{
+    width: 18%;
+    
+    display: flex;
+    align-items: center;
+}
+
+.imgestrela{
+    display: flex;
+    align-items: center;
 }
 
 
@@ -241,6 +263,7 @@ footer{
     height: 150px;
 }
 
+
 .f3{
     width: 135px;
     height: 40px; 
@@ -254,7 +277,9 @@ footer{
 
 
 
-
+/*
+   --------- Responsive ------
+*/
 
 @media only screen and (max-width:500px){
     
